@@ -140,6 +140,7 @@
                 <div class="ib-close"></div>
                 <div class="ib-bar-graph"></div>
                 <div class="ib-expand"></div>
+                <div class="ib-search"></div>
             </div>
         </div>
     </body>
