@@ -2494,22 +2494,22 @@
 }
 
 .ib-close:before, .ib-close:after {
-  left: 9px;
-  top: -1.5px;
   width: 6px;
   height: 27px;
   background-color: #282828;
   border-radius: 0;
+  left: 9px;
+  top: -1.5px;
 }
 
 .ib-close:before {
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .ib-close:after {
   -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .ib-bar-graph {
@@ -2602,5 +2602,51 @@
   border-radius: 0;
   left: 0;
   bottom: 0;
+}
+
+.ib-search {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-search:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-search:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-search:before, .ib-search:after {
+  position: absolute;
+  content: "";
+}
+
+.ib-search:before {
+  border: 6px solid #282828;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+}
+
+.ib-search:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  width: 6px;
+  height: 12px;
+  background-color: #282828;
+  border-radius: 0;
+  right: 4px;
+  bottom: 1px;
 }
 /*# sourceMappingURL=pureicons.css.map */
