@@ -113,3 +113,4 @@
 @import "scss/other/close";
 @import "scss/other/bar-graph";
 @import "scss/other/expand";
+@import "scss/other/search";
