@@ -5,19 +5,19 @@
 
     &:before,
     &:after {
-        left: ($size / 2) - $border-width / 2;
-        top: -($border-width / 4);
         width: $border-width;
         height: $size + $border-width / 2;
         background-color: $dark-color;
         border-radius: $border-radius;
+        left: ($size / 2) - $border-width / 2;
+        top: -($border-width / 4);
     }
 
     &:before {
-        transform: rotate(45deg);
+        @include transform-rotate(45deg);
     }
 
     &:after {
-        transform: rotate(-45deg);
+        @include transform-rotate(-45deg);
     }
 }
